# T2-SD

./: .gitignore  Explicacao.md  README.md  pyproject.toml
proj/: README.md  cliente.py  clientes.py  criptografia.py  main.py  main_a.py  main_cript.py  p0.py  p1.py  p2.py  projeto  script.py
t2_sd/: .t2_sd.py.swp  t2_sd.py
