[tool.poetry]
name = "t2-sd"
version = "0.1.0"
description = ""
authors = ["Gabriel Plaza <gabrielplaza@hotmail.com.br>"]
readme = "README.md"
packages = [{include = "t2_sd"}]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
